--- a/node/package.json
+++ b/node/package.json
@@ -11,11 +11,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@langchain/community": "^0.2.19",
     "dotenv": "^16.4.5",
+    "jsonwebtoken": "^9.0.2",
     "koa": "^2.15.3",
+    "koa-bodyparser": "^4.4.1",
     "koa-router": "^12.0.1",
     "koa-sslify": "^5.0.1",
-    "koa2-cors": "^2.0.6"
+    "koa2-cors": "^2.0.6",
+    "langchain": "^0.2.10",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
