--- a/web/package.json
+++ b/web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nutui/nutui": "^4.3.11",
+    "axios": "^1.7.2",
     "vue": "^3.4.29",
     "vue-router": "^4.4.0"
   },
