--- a/node/package.json
+++ b/node/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "@langchain/community": "^0.2.19",
     "baidu-aip-sdk": "^4.16.16",
     "dotenv": "^16.4.5",
